--- a/MusicWeb/bin/MusicWeb.dll.config
+++ b/MusicWeb/bin/MusicWeb.dll.config
@@ -100,11 +100,11 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </compilers>
   </system.codedom>
-  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="MusicWebEntities" connectionString="metadata=res://*/Models.DataMusicWeb.csdl|res://*/Models.DataMusicWeb.ssdl|res://*/Models.DataMusicWeb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-NK68S4GM\SQLEXPRESS04;initial catalog=MusicWeb;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  
+<connectionStrings><add name="MusicWebEntities" connectionString="metadata=res://*/Models.MusicWeb.csdl|res://*/Models.MusicWeb.ssdl|res://*/Models.MusicWeb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-NK68S4GM\SQLEXPRESS04;initial catalog=MusicWeb;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
